--- a/ToDoList/docker-compose.yml
+++ b/ToDoList/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   web:
     build: .
     command: >
-      sh -c "python manage.py migrate &&
+      sh -c "python wait_for_db.py &&
+             python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
