--- a/ToDoList/Dockerfile
+++ b/ToDoList/Dockerfile
@@ -1,6 +1,8 @@
 from python:3.11-slim
 WORKDIR /app
 
+ENV PYTHONDONTWRITEBYTECODE 1
+
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
